--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,17 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      charset="UTF-8"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,11 +31,12 @@
     <link rel="stylesheet" href="./assets/css/loader.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/sections.css" />
+
     <title>Farouk BEL KHYATE</title>
   </head>
   <body>
-    <div id="root">
-      
-    </div>
+    <div id="root"></div>
+
+    <script defer src="/assets/js/main.js"></script>
   </body>
 </html>
